[gd_scene load_steps=12 format=3 uid="uid://bsl52ur7h2i8k"]

[ext_resource type="Shader" path="res://Effect/transition.gdshader" id="1_jw1ur"]
[ext_resource type="Texture2D" uid="uid://yhrvybkjwsr6" path="res://Sprites/cutout.png" id="2_uw2un"]
[ext_resource type="Script" path="res://Scripts/UI/transition.gd" id="3_yxu61"]
[ext_resource type="AudioStream" uid="uid://c3oakb363at76" path="res://SoundEffects/menuOut.wav" id="4_mhwhi"]
[ext_resource type="Script" path="res://Scripts/Misc/AudioManager.gd" id="5_gk2w3"]
[ext_resource type="AudioStream" uid="uid://bwxojg22oia6x" path="res://SoundEffects/menuIn.wav" id="6_dep2v"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1hbq6"]
shader = ExtResource("1_jw1ur")
shader_parameter/scale = 0.0
shader_parameter/mask = ExtResource("2_uw2un")

[sub_resource type="Animation" id="Animation_je3np"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_5rddb"]
resource_name = "fadeToBlack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_x7h0w"]
resource_name = "fadeToScene"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3nj7r"]
_data = {
"RESET": SubResource("Animation_je3np"),
"fadeToBlack": SubResource("Animation_5rddb"),
"fadeToScene": SubResource("Animation_x7h0w")
}

[node name="Transition" type="ColorRect"]
z_index = 15
material = SubResource("ShaderMaterial_1hbq6")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0235294, 0.0588235, 0.0509804, 1)
script = ExtResource("3_yxu61")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3nj7r")
}

[node name="FadeToBlack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_mhwhi")
script = ExtResource("5_gk2w3")
pitch_min = 1.5
pitch_max = 1.8

[node name="FadeToScreen" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_dep2v")
script = ExtResource("5_gk2w3")
pitch_min = 1.5
pitch_max = 1.8

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
